--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -334,7 +334,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WdJ-JF-0dJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2698" y="633"/>
+            <point key="canvasLocation" x="2698" y="665"/>
         </scene>
         <!--Wifi Config Note View Controller-->
         <scene sceneID="QQf-yB-jGM">
@@ -430,13 +430,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_small_white_circle.png" translatesAutoresizingMaskIntoConstraints="NO" id="GRK-h3-bgV">
-                                <rect key="frame" x="30" y="20" width="90" height="90"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="8Lm-Ef-g0S"/>
-                                    <constraint firstAttribute="width" constant="90" id="Our-t6-hwF"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BWW-6U-QrA">
                                 <rect key="frame" x="138" y="63" width="80" height="30"/>
                                 <constraints>
@@ -450,14 +443,13 @@
                                     <action selector="changeUser:" destination="ek5-Io-B3O" eventType="touchUpInside" id="pDm-wQ-y1l"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="父亲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFc-WK-SkV">
-                                <rect key="frame" x="151" y="43" width="100" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="父亲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lFc-WK-SkV">
+                                <rect key="frame" x="151" y="43" width="120" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="qGB-6R-Fju"/>
+                                    <constraint firstAttribute="width" constant="120" id="qGB-6R-Fju"/>
                                     <constraint firstAttribute="height" constant="21" id="qPQ-J2-th0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BZE-yR-tVn">
@@ -469,6 +461,13 @@
                                     <outlet property="delegate" destination="ek5-Io-B3O" id="f23-LW-kSB"/>
                                 </connections>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_small_white_circle.png" translatesAutoresizingMaskIntoConstraints="NO" id="GRK-h3-bgV">
+                                <rect key="frame" x="30" y="20" width="90" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="8Lm-Ef-g0S"/>
+                                    <constraint firstAttribute="width" constant="90" id="Our-t6-hwF"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
